--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 layout: default
 ref: index
 ---
+{% include components/puntos-de-venta.html %}
+{% include components/about.html %}
 {% include components/list-post.html %}
 
