--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ ref: index
 ---
 {% include components/puntos-de-venta.html %}
 {% include components/about.html %}
-{% include components/list-post.html %}
+{% include components/nuestras-marcas.html %}
 
