--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ ref: index
 {% include components/puntos-de-venta.html %}
 {% include components/about.html %}
 {% include components/nuestras-marcas.html %}
+{% include components/noticias.html %}
 
